feat: compiling java source files